[package]
name = "moly-protocol"
version = "0.1.0"
edition = "2021"
description = "Protocol definitions for the Moly server and client communication"
authors = ["Moxin Organization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
